# autora-theorist-template

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test-setuptools-build.yml
docs/: example.ipynb  index.md
mkdocs/: _gen_ref_pages.py  base.yml  gen_ref_pages.py  mathjax.js
src/autora/theorist/example/: __init__.py
tests/: test_theorist_example.py
