[project]
name = "autora-theorist-template"
description = "AutoRA Theorist Template"
authors = []
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8.10,<3.11"
dynamic = ["version"]


dependencies = [
    "autora-core",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    #"autora-core[dev]",
    "build",
    "twine",
    "jupyter",
    "ipython",
    "ipywidgets",
    "flake8",
    "pytest",
    "pre-commit",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocstrings-python",
    "mkdocs-jupyter",
    "pymdown-extensions",
]

[project.urls]
homepage = "https://www.empiricalresearch.ai"
repository = "https://github.com/AutoResearch/autora-theorist-template"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
